feat(OpenAPI Services): add NearestSettlement service
